# mfs2012

./: configure.ac
backend/: feed-service.c  feed-test.c  gt-feed-server-private.h  gt-feed-server.c  gt-feed.c
po/: POTFILES  POTFILES.in  POTFILES.skip  en.po  es.po
src/: gt-sample.c  main.c
